--- a/.github/workflows/time-trigger-2.yml
+++ b/.github/workflows/time-trigger-2.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
       - name: Run script
         run: python scripts/update_time.py
       - name: commit and push changes
@@ -21,3 +21,5 @@ jobs:
           git add time.txt
           git commit -m "Update time.txt" || echo "No changes to commit"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
