--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Run script
         env:
           NEWSAPI_KEY: ${{ secrets.NEWSAPI_KEY }}
-        run: python your_script.py
+        run: python scripts/newsletter.py
