--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -12,6 +12,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.13"
+      - name: Install Python packages
+        run: |
+          python -m pip install --upgrade pip
+          pip install python-dotenv eventregistry
       - name: Run script
         env:
           NEWSAPI_KEY: ${{ secrets.NEWSAPI_KEY }}
