--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -20,3 +20,12 @@ jobs:
         env:
           NEWSAPI_KEY: ${{ secrets.NEWSAPI_KEY }}
         run: python scripts/newsletter.py
+      - name: Commit and push articles.JSON
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add articles.JSON
+          git commit -m "Update articles.JSON from workflow" || echo "No changes to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
